--- a/program3.1
+++ b/program3.1
@@ -16,7 +16,7 @@ System.out.println("Sum is " + sum);
 }
 }
 /* 
-PS C:\Users\student\Desktop\Krishna> javac Main3.java
-PS C:\Users\student\Desktop\Krishna> java Main3
+PS C:\Users\student\Desktop\Krishna> javac Program3.java
+PS C:\Users\student\Desktop\Krishna> java Program3
 Sum is 12
 */
